--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -20,6 +20,16 @@
         android:layout_margin="10dp"
         app:layout_constraintTop_toBottomOf="@id/text" />
 
+    <ImageView
+        android:id="@+id/textImage"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toStartOf="@id/textLength"
+        tools:src="@mipmap/bbicon_foreground"
+        app:layout_constraintTop_toBottomOf="@id/textLength" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
